# FTPmirror

./: .gitignore  CMakeLists.txt  README.md  build  mirror.c  mirror.h
include/: ftp_client.h
src/: ftp_client.c  main.c
tests/: test_ftp_client.cc
